# asset-allocation

./: .codedrift.yml  .dockerignore  .env.template  .gitignore  AGENTS.md  CONTRIBUTING.md  DATA.md  Dockerfile  Dockerfile.asset_allocation_api  Dockerfile.backtest_api  README.md  SECURITY.md  aaa_ai.py  aaa_script_runner.py  analyze_deps.py  audit_snapshot.json  bulk_refactor.py  collapse_namespaces.py  debug_monitor_metrics.py  docker-compose.yml  final_remediation.py  finance_data_job.yaml  fix_imports_remediation.py  fix_test_imports.py  inspect_platinum.py  main.py  massive_indices_tickers.csv  pip_reqs.txt  pyproject.toml  pytest.ini  pytest_result.txt  refactor_structure.py  rename_module_debug.py  requirements-dev.lock.txt  requirements-dev.txt  requirements-opt.txt  requirements.lock.txt  requirements.txt  run_alpaca_tests.py  run_tests.bat  (+13 more)
.github/: dependabot.yml
Symbols/: symbols.csv
alpaca/: models.py  reconciler.py  state.py  trading_rest.py  trading_stream.py  transport_http.py  transport_ws.py
alpha_vantage/: __init__.py  client.py  config.py  rate_limiter.py
api/: API_ENDPOINTS.md  __init__.py  data_service.py  dependencies.py  main.py
artifacts/: data_flow_guide.md  dependency_governance_report.json  drift_report.json  drift_report.md  orchestrator_audit_snapshot.json  refactoring_report.md  testing_infrastructure.md  workflow_audit_snapshot.json  workflow_audit_snapshot_dependency_governance.json
asset_allocation/: __init__.py  config.py
backtest/: __init__.py  broker.py  cli.py  composite_strategy.py  config.py  constraints.py  engine.py  optimization.py  portfolio.py  reporter.py  risk_model.py  runner.py  sizer.py  strategy.py
backtests/: backtest_daily.yaml  backtest_monthly.yaml  backtest_smoke.yaml  example_composite_50_50.yaml  example_configured_topn.yaml  example_configured_vcp_breakout_long.yaml  platinum_ep_continuation_long.yaml  platinum_gap_and_crap_short.yaml  platinum_pullback_failure_short.yaml  platinum_pullback_long.yaml  platinum_vcp_breakdown_short.yaml  platinum_vcp_breakout_long.yaml  test_strategy_db.yaml
core/: __init__.py  alpha_vantage_gateway_client.py  backtest_artifacts.py  backtest_repository.py  backtest_runtime.py  blob_storage.py  bronze_bucketing.py  by_date_pipeline.py  config.py  config_legacy.py  config_shared.py  core.py  data_contract.py  debug_symbols.py  delta_core.py  domain_artifacts.py  domain_metadata_snapshots.py  finance_contracts.py  gold_column_lookup_catalog.py  gold_sync_contracts.py  layer_bucketing.py  logging.py  logging_config.py  market_symbols.py  massive_gateway_client.py  pipeline.py  playwright_lib.py  purge_rules.py  ranking_repository.py  regime.py  runtime_config.py  strategy_repository.py  symbol_availability.py  universe_repository.py
deploy/: app_api.yaml  app_api_public.yaml  app_backtest_api.yaml  app_ui.yaml  job_bronze_earnings_data.yaml  job_bronze_finance_data.yaml  job_bronze_market_data.yaml  job_bronze_price_target_data.yaml  job_earnings_data.yaml  job_earnings_features.yaml  job_finance_data.yaml  job_finance_features.yaml  job_gold_earnings_by_date.yaml  job_gold_earnings_data.yaml  job_gold_earnings_wide.yaml  job_gold_finance_by_date.yaml  job_gold_finance_data.yaml  job_gold_finance_wide.yaml  job_gold_market_by_date.yaml  job_gold_market_data.yaml  job_gold_price_target_by_date.yaml  job_gold_price_target_data.yaml  job_gold_price_target_wide.yaml  job_gold_regime_data.yaml  job_market_data.yaml  job_market_data_features.yaml  job_platinum_ranking.yaml  job_platinum_rankings.yaml  job_price_target_features.yaml  job_price_targets.yaml  job_ranking.yaml  job_reconcile_finance_coverage.yaml  job_silver_earnings_by_date.yaml  job_silver_earnings_data.yaml  job_silver_finance_by_date.yaml  job_silver_finance_data.yaml  job_silver_market_by_date.yaml  job_silver_market_data.yaml  job_silver_price_target_by_date.yaml  job_silver_price_target_data.yaml  (+5 more)
docs/: PM_gaps_analysis.md  backtest_service.md  (+32 more)
(+1052 files in other folders)
