[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocation"
version = "0.1.0"
description = "Market/finance ETL, system monitoring, and a backtest framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "colorama==0.4.6",
    "pyarrow==19.0.1",
    "nasdaq-data-link==1.0.4",
    "filelock==3.20.1",
    "pytz==2025.2",
    "requests==2.32.3",
    "azure-storage-blob==12.24.0",
    "azure-identity==1.15.0",
    "deltalake==1.3.0",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0.post0",
    "psycopg==3.2.3",
    "psycopg-binary==3.2.3",
    "fastapi==0.115.8",
    "jinja2==3.1.5",
    "uvicorn==0.34.0",
    "httpx==0.27.2",
    "asyncpg==0.30.0",
    "websockets==14.2",
    "PyJWT==2.10.1",
    "cryptography==46.0.3",
    "pydantic-settings==2.12.0",
    "PyYAML==6.0.3",
    "pydantic==2.12.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "alpaca*",
    "alpha_vantage*",
    "api*",
    "core*",
    "monitoring*",
    "services*",
    "tasks*",
]

[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "ui",
    "tmp",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
