[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocation"
version = "0.1.0"
description = "Market/finance ETL, system monitoring, and a backtest framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.2.6",
    "colorama==0.4.6",
    "pyarrow==23.0.1",
    "nasdaq-data-link==1.0.4",
    "filelock==3.24.3",
    "pytz==2025.2",
    "requests==2.32.5",
    "azure-storage-blob==12.28.0",
    "azure-identity==1.25.2",
    "deltalake==1.4.2",
    "python-dotenv==1.2.1",
    "python-dateutil==2.9.0.post0",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "fastapi==0.133.1",
    "jinja2==3.1.6",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "asyncpg==0.31.0",
    "websockets==16.0",
    "PyJWT==2.11.0",
    "cryptography==46.0.5",
    "pydantic-settings==2.13.1",
    "PyYAML==6.0.3",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
massive-ws = [
    "massive",
]
massive-flatfiles = [
    "boto3",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "alpaca*",
    "alpha_vantage*",
    "api*",
    "core*",
    "massive_provider*",
    "monitoring*",
    "services*",
    "tasks*",
]

[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "ui",
    "tmp",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
